--- a/main.css
+++ b/main.css
@@ -57,8 +57,23 @@ bs-dropdown-container .dropdown-menu {
 /* Project  */
 
 #plus-add-new-post {
+    background-color: #fff;
+    border-color: #e5e5e5;
+    color: #5a6268;
     border-radius: 24px;
     padding-left: 2rem;
     padding-right: 2rem;
     margin: 0 1rem 0 2.5rem;
+}
+
+#plus-profile-sell-btn {
+    background-color: #fff;
+    border-color: #e5e5e5;
+    color: #5a6268;
+}
+
+#plus-add-new-post:hover, #plus-profile-sell-btn:hover {
+    background-color: #5a6268;
+    border-color: #5a6268;
+    color: #e5e5e5;
 }
